--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "author": "wonderbright <jirattikarn00@tuta.io>",
   "description": "A colour palette keeper app based on Electron.js + Vue.js",
-  "license": null,
+  "license": "MIT",
   "main": "./dist/electron/main.js",
   "scripts": {
     "build": "node .electron-vue/build.js && electron-builder",
@@ -17,7 +17,7 @@
     "postinstall": ""
   },
   "build": {
-    "productName": "couleur",
+    "productName": "Couleur",
     "appId": "com.couleur",
     "directories": {
       "output": "build"
